manifests/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
  namespace: ping-pong-namespace
spec:
  selector:
    matchLabels:
      app: fil7er-nodejs-ping-pong-db
  serviceName: fil7er-nodejs-ping-pong-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: fil7er-nodejs-ping-pong-db
    spec:
      containers:
      - name: fil7er-nodejs-ping-pong-db
        image: postgres
        ports:
        - containerPort: 5432
          name: postgres-port
