manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fil7er-nodejs-ping-pong-svc
  namespace: ping-pong-namespace
spec:
  type: NodePort
  selector:
    app: fil7er-nodejs-ping-pong
  ports:
    - nodePort: 30011 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 80 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3005 # This is the target port
