manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fil7er-nodejs-ping-pong-ingress
  namespace: ping-pong-namespace
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: fil7er-nodejs-ping-pong-svc
            port:
              number: 2347
